styles/_globals.scss
html,
body,
#__next {
  height: 100%;
}

.app-wrapper {
  min-height: 100%;
  display: flex;
  flex-direction: column;
}

.body {
  flex: 1 0 auto;
}

.active {
  color: var(--success);
  font-weight: bold;
}

.mdx-prose {
  .code-block {
    font-size: 1rem;
    line-height: 1.5;
    overflow-x: auto;
    padding: 1rem 0;
    font-family: "Fira Code", monospace;
    word-wrap: normal !important;
    white-space: pre;
  }

  .token-line {
    padding-inline-start: var(--chakra-space-5);
    padding-inline-end: var(--chakra-space-5);
  }
  .plain {
    color: #f8f8f2;
  }
}

